ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/banner-component.less
.banner {
  .gu-banner {
    background: url("/content/dam/guides/common-images/images/banner-cover.svg")
      no-repeat center center;
    background-size: cover;
    height: 576px;
    position: relative;

    /* Add overlay for better text visibility */
    &::after {
      content: "";
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background: linear-gradient(
        to bottom,
        rgba(0, 0, 0, 0.1),
        rgba(0, 0, 0, 0.5)
      );
      z-index: -1;
    }

    &__container {
      gap: 1rem;
      height: 100%;
    }

    &__title {
      color: var(--white-color);
      font-weight: 600;
      font-size: 3.5rem;
      line-height: 1;
      margin-top: 16.75rem;
    }

    &__description {
      color: var(--white-color);
      font-weight: 500;
      font-size: 1rem;
      line-height: 1.5;
      width: 712px;
      margin-top: 1rem;
      margin-bottom: 2rem;
    }

    &__cta {
      background-color: var(--white-color);
      color: var(--primary-color);
      padding: 0.7rem 1.8rem;
      border: none;
      border-radius: 0.75rem;
      font-size: 16px;
      font-weight: 500;
      cursor: pointer;
      transition: background-color 0.3s;
      margin-bottom: 5rem;
      text-decoration: none;

      &:hover {
        background-color: var(--primary-color);
        color: var(--white-color);
      }
    }
  }
  @media (max-width: 768px) {
    .gu-banner {
      height: 474px;

      &__title {
        font-size: 2.25rem;
        line-height: 2.875rem;
      }

      &__description {
        font-size: 0.875rem;
        max-width: 80%;
        line-height: 1.5rem;
      }

      &__cta {
        padding: 0.6rem 1.8rem;
        margin-bottom: 3rem;
      }
    }
  }

  @media (max-width: 480px) {
    .gu-banner {
      height: 474px;
      padding: 2rem 0;

      &__title {
        font-size: 2.375rem;
        line-height: 2.875rem;
      }

      &__description {
        font-size: 0.875rem;
        max-width: 100%;
        line-height: 1.5rem;
      }

      &__cta {
        padding: 0.5rem 1.5rem;
        margin-bottom: 0;
      }
    }
  }
}

